Stop charts overflowing cells on home and landing pages

--- a/www-src/app/styles/home.less
+++ b/www-src/app/styles/home.less
@@ -75,6 +75,8 @@
 	}
 
 	.dc-chart {
+		float: none;
+
 		.axis {
 			display: none;
 		}
