--- a/www-src/app/styles/landing.less
+++ b/www-src/app/styles/landing.less
@@ -49,6 +49,8 @@
 	}
 
 	.dc-chart {
+		float: none;
+
 		.axis {
 			display: none;
 		}
